front/src/pages/Annonces/Annonces.scss
@import '../../style.scss';

.annonce {
	
	&-title {
		@include main-typography;
		margin-top: 30px;
		margin-bottom: 0;
		color: $primary-color;
		font-size: 36px;
		font-weight: 500;
		line-height: 142.6%;
		
	}
	&-location {
		@include main-typography;
		margin-top: 0.3125rem;
		margin-bottom: 0;
		color: black;
		font-size: 18px;
		font-weight: 500;
		line-height: 142.6%;
		
	}
	
}

.tag-wrapper {
	display: flex;
	flex-wrap: wrap;
}

.rating {
	
	&-host-wrapper {
		display: flex;
		align-items: center;
		justify-content: space-between;
		margin-top: 1rem;
		margin-bottom: 1rem;
		
	}
}
.host {
	&-wrapper {
		display: flex;
		align-items: center;
		
	}
	&-name {
		@include main-typography;
		margin-right: 0.75rem;
		color: $primary-color;
		font-size: 18px;
		font-weight: 500;
		text-align: end;
		
	}
	&-picture {
		width: 64px;
		height: 64px;
		border-radius: 100%;
		
	}
}
.sectionAnnonce{
	max-width: 1240px;
	margin: 0 auto;
}

.annonce-info-wrapper{
  display: flex;
  justify-content: space-between;
  align-items: end;
}
.tagTag{
	display: flex;
	justify-content: space-between;
}
.description-equipments-wrapper{
	display: flex;
	justify-content: space-between;
  margin-top: 76px;
}

